# quantitative_trading

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: TODO.md  roadmap.html  roadmap2.html
learning/: INDEX.md  README.md  progress.md
learning/phase1_foundation/: .gitignore  00_setup.ipynb  01_stock_etf_a_share_rules.ipynb  02_kline.html  02_kline_dataframe.ipynb  03_volume_aggregation.ipynb  04_data_cleaning_adjust_align.ipynb  05_returns_limit_identification.ipynb  06_statistics_trading_costs.ipynb  07_technical_indicators.ipynb  08_pe_valuation_industry.ipynb  09_vectorization.ipynb  10_capstone_stock_analysis.ipynb  _build_notebooks.py  _build_remaining.py  _data.py  _style.py
learning/phase1_foundation/exercises/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py
learning/phase1_foundation/exercises/solutions/: __init__.py  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py
learning/phase2_strategies/: 11_dual_ma_timing.ipynb  12_turtle_donchian_atr.ipynb  13_grid_strategy.ipynb  14_multi_stock_selection.ipynb  15_portfolio_construction.ipynb  _build_phase2.py
learning/phase2_strategies/exercises/: ex14.py  ex15.py
qtrader/: __init__.py  cache.py  data.py  engine.py  metrics.py  optimize.py  plotting.py  strategies.py
scripts/: build_report.py  run_backtest.py  run_dual_ma.py  run_gridsearch.py
tests/: test_cache.py  test_costs.py  test_metrics.py  test_optimize.py  test_strategies.py
