[project]
name = "qtrader"
version = "0.1.0"
description = "零依赖 A股量化回测框架（双均线 / 海龟 / 网格 多策略对比）"
requires-python = ">=3.9"
dependencies = [
    "akshare>=1.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.1"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: 单元测试（不联网、不读文件）",
    "integration: 集成测试（联网或读数据文件）",
]
